--- a/results.html
+++ b/results.html
@@ -7,5 +7,23 @@
 <body>
       result of addition : {{ msg }}
       <h2><a href = "/">main page</a></h2>
+
+
+@app.route('/show-records/', methods=["GET"])
+def show_records():
+    records = []
+    try:
+        with sqlite3.connect('database.db') as con:
+            cur = con.cursor()
+            cur.execute("SELECT * FROM students")
+            records = cur.fetchall()
+    except Exception as e:
+        con.rollback()
+        print("There was an error fetching results from the database.")
+    finally:
+        con.close()
+        return render_template('records.html', records=records)
+
+
 </body>
 </html>
